--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
+<!--Used template from w3schools-->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>theshirley.me</title>
-  </head>
+<title>theshirley.me</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+<style>
+body {font-family: "Raleway", Arial, sans-serif}
+.w3-row img {margin-bottom: -8px}
+</style>
+<body>
 
-  <body>
-    my web!
-  </body>
+<!-- !PAGE CONTENT! -->
+<div class="w3-content" style="max-width:1500px">
+
+  <!-- Header -->
+  <header class="w3-container w3-xlarge w3-padding-24">
+    <a href="#" class="w3-left w3-button w3-white">MY CATS</a>
+    <a href="#about" class="w3-right w3-button w3-white">About</a>
+  </header>
+
+  <!-- Photo Grid -->
+  <div class="w3-row">
+    <div class="w3-half">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko7.png" style="width:100%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko.png" style="width:100%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\keyboard.gif" style="width:35%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\gif2.gif" style="width:36% height:9%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko6.jpg" style="width:100%">
+
+
+    </div>
+
+    <div class="w3-half">
+      <img src="\src\neko4.png" style="width:49%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko3.png"style="width:49%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko5.png" style="width:100%">
+      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\watermelon.gif" style="width:100%">
+    </div>
+  </div>
+
+<!-- End Page Content -->
+</div>
+
+<!-- Footer / About Section -->
+<footer class="w3-light-grey w3-padding-64 w3-center" id="about">
+  <h2>About</h2>
+  <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\tubs.png" class="w3-image w3-padding-32" width="300" height="300">
+  <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
+    <p>Originally a website about myself. Then I decided cute cartoon cats(and random cat gifs) are more interesting.
+      Daily life of my cats from Neko-atsume- an app that increased my happiness level by tenfold</p>
+
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
+</body>
 </html>
