--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko7.png" style="width:100%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko.png" style="width:100%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\keyboard.gif" style="width:35%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\gif2.gif" style="width:36% height:9%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko6.jpg" style="width:100%">
+      <img src="\src\neko7.png" style="width:100%">
+      <img src="\src\neko.png" style="width:100%">
+      <img src="\src\keyboard.gif" style="width:35%">
+      <img src="\src\gif2.gif" style="width:36% height:9%">
+      <img src="\src\neko6.jpg" style="width:100%">
 
 
     </div>
 
     <div class="w3-half">
       <img src="\src\neko4.png" style="width:49%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko3.png"style="width:49%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\neko5.png" style="width:100%">
-      <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\watermelon.gif" style="width:100%">
+      <img src="\src\neko3.png"style="width:49%">
+      <img src="\src\neko5.png" style="width:100%">
+      <img src="\src\watermelon.gif" style="width:100%">
     </div>
   </div>
 
