--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
   <h2>About</h2>
-  <img src="C:\Users\Xinyi\Documents\GitHub\theshirley.me\src\tubs.png" class="w3-image w3-padding-32" width="300" height="300">
+  <img src="\src\tubs.png" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
     <p>Originally a website about myself. Then I decided cute cartoon cats(and random cat gifs) are more interesting.
       Daily life of my cats from Neko-atsume- an app that increased my happiness level by tenfold</p>
