--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Used template from w3schools-->
+<!--adapted from a template by w3schools-->
 <!DOCTYPE html>
 <html>
 <title>theshirley.me</title>
@@ -17,8 +17,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white">MY CATS</a>
-    <a href="#about" class="w3-right w3-button w3-white">About</a>
+    <a href="#" class="w3-left w3-button w3-light-blue w3-text-white">MY CATS</a>
+    <a href="#about" class="w3-right w3-button w3-light-blue w3-text-white">About</a>
   </header>
 
   <!-- Photo Grid -->
@@ -45,7 +45,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 </div>
 
 <!-- Footer / About Section -->
-<footer class="w3-light-grey w3-padding-64 w3-center" id="about">
+<footer class="w3-light-blue w3-text-white w3-padding-64 w3-center" id="about">
   <h2>About</h2>
   <img src="\src\tubs.png" class="w3-image w3-padding-32" width="300" height="300">
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
